# news-layout-classifier

./: .gitignore  README.md  generate_templates.py  pyproject.toml
classify/: __init__.py  classifier.py  main.py
src/news_layout/: __init__.py  __main__.py
templates/: news_layout_templates.npz
