[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "news-layout-classifier"
version = "1.0.0"
description = "YouTube news layout classifier (left/right/other) using pixel-wise match ratio"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = ["numpy", "Pillow"]

[project.scripts]
news-layout = "news_layout.__main__:main"

[project.urls]
Repository = "https://github.com/miles0428/news-layout-classifier"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
news_layout = ["templates/*.npz"]
